mypkg/objects/Item__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>Quantity__c  *  Select_Car_Part__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cart_No__c</fullName>
        <label>Cart No.</label>
        <referenceTo>Cart__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Part_Name__c</fullName>
        <label>Part Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Select_Car_Part__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Select Car Part</label>
        <referenceTo>Car_Parts__c</referenceTo>
        <relationshipLabel>Items</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Cart_No__c</columns>
        <columns>NAME</columns>
        <columns>Quantity__c</columns>
        <columns>Amount__c</columns>
        <columns>Part_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IN-{0000}</displayFormat>
        <label>Item No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Out_of_Stock</fullName>
        <active>false</active>
        <errorConditionFormula>In_Stock__c  &lt; 0</errorConditionFormula>
        <errorMessage>The Product is Out of Stock.</errorMessage>
    </validationRules>
</CustomObject>